Replace video with performant CSS animated background; smoother animations; increase corner radius

--- a/index.html
+++ b/index.html
@@ -49,13 +49,8 @@
   </nav>
 
   <section class="relative h-screen flex items-center justify-center text-center">
-    <div class="video-background">
-      <video autoplay loop muted playsinline preload="auto">
-        <source src="0_Galaxy_Milky_Way_3840x2160.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
-    <div class="site-overlay"></div>
+  <div class="animated-bg" aria-hidden="true"></div>
+  <div class="site-overlay" aria-hidden="true"></div>
   <div class="relative z-10">
       <h1 class="text-6xl md:text-8xl font-bold">SPS USM</h1>
       <p class="mt-6 text-xl md:text-2xl">Society of Physics Students - The University of Southern Mississippi</p>
