Switch to plain theme: remove animated background, add theme toggle utility, normalize nav and hidden class; replace color utilities

--- a/index.html
+++ b/index.html
@@ -49,8 +49,6 @@
   </nav>
 
   <section class="relative h-screen flex items-center justify-center text-center">
-  <div class="animated-bg" aria-hidden="true"></div>
-  <div class="site-overlay" aria-hidden="true"></div>
   <div class="relative z-10">
       <h1 class="text-6xl md:text-8xl font-bold">SPS USM</h1>
       <p class="mt-6 text-xl md:text-2xl">Society of Physics Students - The University of Southern Mississippi</p>
@@ -104,7 +102,7 @@
     <!-- Officer Modal Popup -->
     <div id="officer-modal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-70 hidden">
         <div class="glass max-w-md w-full p-8 relative text-center">
-          <button id="close-officer-modal" class="absolute top-4 right-4 text-gray-600 hover:text-accent text-2xl font-bold">&times;</button>
+          <button id="close-officer-modal" class="absolute top-4 right-4 text-muted hover-accent text-2xl font-bold">&times;</button>
           <img id="modal-officer-img" src="" class="w-24 h-24 rounded-full border-4 shadow-lg mx-auto mb-4 object-cover" style="border-color:var(--accent)" alt="Officer">
           <h3 id="modal-officer-title" class="text-xl font-bold" style="color:var(--accent)"></h3>
           <p id="modal-officer-name" class="font-semibold mb-4"></p>
@@ -124,51 +122,51 @@
         <!-- Advisor 1 -->
   <div class="swiper-slide flex flex-col items-center aos-fade">
           <img src="jeremy-scott.jpg" 
-          class="w-40 h-40 rounded-full border-4 border-yellow-500 shadow-lg mb-6 object-cover" 
+          class="w-40 h-40 rounded-full border-4 avatar-border shadow-lg mb-6 object-cover" 
           alt="Advisor 1">
 
-          <h3 class="text-2xl text-yellow-400 font-bold">Professor Jeremy Scott</h3>
-          <p class="text-gray-300 mt-2 max-w-md">Professor of Physics. Teaches students General Physics, Modern Physics, Mathematical Methods, Optics, Advanced Physics Lab.</p>
+          <h3 class="text-2xl text-accent font-bold">Professor Jeremy Scott</h3>
+          <p class="text-muted mt-2 max-w-md">Professor of Physics. Teaches students General Physics, Modern Physics, Mathematical Methods, Optics, Advanced Physics Lab.</p>
         </div>
 
         <!-- Advisor 2 -->
   <div class="swiper-slide flex flex-col items-center aos-fade">
           <img src="chris-sirola.jpg" 
-          class="w-40 h-40 rounded-full border-4 border-yellow-500 shadow-lg mb-6 object-cover" 
+          class="w-40 h-40 rounded-full border-4 avatar-border shadow-lg mb-6 object-cover" 
           alt="Advisor 1">
 
-          <h3 class="text-2xl text-yellow-400 font-bold">Professor Chris Sirola</h3>
-          <p class="text-gray-300 mt-2 max-w-md">Professor of Astronomy & Physics education; quasars; variable stars. Current research interests include science education and variable stars.</p>
+          <h3 class="text-2xl text-accent font-bold">Professor Chris Sirola</h3>
+          <p class="text-muted mt-2 max-w-md">Professor of Astronomy & Physics education; quasars; variable stars. Current research interests include science education and variable stars.</p>
         </div>
 
         <!-- Advisor 3 -->
   <div class="swiper-slide flex flex-col items-center aos-fade">
           <img src="_faculty-profile-placeholder.jpg" 
-          class="w-40 h-40 rounded-full border-4 border-yellow-500 shadow-lg mb-6 object-cover" 
+          class="w-40 h-40 rounded-full border-4 avatar-border shadow-lg mb-6 object-cover" 
           alt="Advisor 1">
 
-          <h3 class="text-2xl text-yellow-400 font-bold">Dr. Michael Vera</h3>
-          <p class="text-gray-300 mt-2 max-w-md">Professor of Physics. Teaches E&M, General Physics, Quantum Mechanics. Specializes in Ocean acoustics, chaotic systems, computational simulation.</p>
+          <h3 class="text-2xl text-accent font-bold">Dr. Michael Vera</h3>
+          <p class="text-muted mt-2 max-w-md">Professor of Physics. Teaches E&M, General Physics, Quantum Mechanics. Specializes in Ocean acoustics, chaotic systems, computational simulation.</p>
         </div>
 
         <!-- Advisor 4 -->
   <div class="swiper-slide flex flex-col items-center aos-fade">
           <img src="chris-winstead.jpg" 
-          class="w-40 h-40 rounded-full border-4 border-yellow-500 shadow-lg mb-6 object-cover" 
+          class="w-40 h-40 rounded-full border-4 avatar-border shadow-lg mb-6 object-cover" 
           alt="Advisor 1">
 
-          <h3 class="text-2xl text-yellow-400 font-bold">Dr. Chris Winstead</h3>
-          <p class="text-gray-300 mt-2 max-w-md">Dean of the College of Arts and Sciences.</p>
+          <h3 class="text-2xl text-accent font-bold">Dr. Chris Winstead</h3>
+          <p class="text-muted mt-2 max-w-md">Dean of the College of Arts and Sciences.</p>
         </div>
 
         <!-- Advisor 5 -->
   <div class="swiper-slide flex flex-col items-center aos-fade">
           <img src="katja-biswas.jpg" 
-          class="w-40 h-40 rounded-full border-4 border-yellow-500 shadow-lg mb-6 object-cover" 
+          class="w-40 h-40 rounded-full border-4 avatar-border shadow-lg mb-6 object-cover" 
           alt="Advisor 1">
 
-          <h3 class="text-2xl text-yellow-400 font-bold">Dr. Katja Biswas</h3>
-          <p class="text-gray-300 mt-2 max-w-md">Analytical Mechanics, Classical Electrodynamics, General Physics ​with Calculus.</p>
+          <h3 class="text-2xl text-accent font-bold">Dr. Katja Biswas</h3>
+          <p class="text-muted mt-2 max-w-md">Analytical Mechanics, Classical Electrodynamics, General Physics with Calculus.</p>
         </div>
 
       </div>
@@ -191,8 +189,8 @@
         <!-- Event 1 -->
         <div class="swiper-slide">
           <div class="bg-gray-800 p-6 rounded-2xl shadow-lg">
-            <h3 class="text-xl font-semibold text-yellow-400">Physics Demo Day</h3>
-            <p class="text-gray-300 mt-2">Exciting experiments & demonstrations.</p>
+            <h3 class="text-xl font-semibold text-accent">Physics Demo Day</h3>
+            <p class="text-muted mt-2">Exciting experiments & demonstrations.</p>
             <a href="event1.html" class="text-blue-400 underline mt-4 block">View Details</a>
           </div>
         </div>
@@ -200,8 +198,8 @@
         <!-- Event 2 -->
         <div class="swiper-slide">
           <div class="bg-gray-800 p-6 rounded-2xl shadow-lg">
-            <h3 class="text-xl font-semibold text-yellow-400">Conference Trip</h3>
-            <p class="text-gray-300 mt-2">Our students presenting at APS.</p>
+            <h3 class="text-xl font-semibold text-accent">Conference Trip</h3>
+            <p class="text-muted mt-2">Our students presenting at APS.</p>
             <a href="event2.html" class="text-blue-400 underline mt-4 block">View Details</a>
           </div>
         </div>
@@ -209,8 +207,8 @@
         <!-- Event 3 -->
         <div class="swiper-slide">
           <div class="bg-gray-800 p-6 rounded-2xl shadow-lg">
-            <h3 class="text-xl font-semibold text-yellow-400">Outreach Program</h3>
-            <p class="text-gray-300 mt-2">Sharing physics with local schools.</p>
+            <h3 class="text-xl font-semibold text-accent">Outreach Program</h3>
+            <p class="text-muted mt-2">Sharing physics with local schools.</p>
             <a href="event3.html" class="text-blue-400 underline mt-4 block">View Details</a>
           </div>
         </div>
@@ -218,8 +216,8 @@
         <!-- Event 4 -->
         <div class="swiper-slide">
           <div class="bg-gray-800 p-6 rounded-2xl shadow-lg">
-            <h3 class="text-xl font-semibold text-yellow-400">Lab Tour</h3>
-            <p class="text-gray-300 mt-2">Guided visit to research facilities.</p>
+            <h3 class="text-xl font-semibold text-accent">Lab Tour</h3>
+            <p class="text-muted mt-2">Guided visit to research facilities.</p>
             <a href="event4.html" class="text-blue-400 underline mt-4 block">View Details</a>
           </div>
         </div>
@@ -227,8 +225,8 @@
         <!-- Event 5 -->
         <div class="swiper-slide">
           <div class="bg-gray-800 p-6 rounded-2xl shadow-lg">
-            <h3 class="text-xl font-semibold text-yellow-400">Social Night</h3>
-            <p class="text-gray-300 mt-2">Games, networking, and fun!</p>
+            <h3 class="text-xl font-semibold text-accent">Social Night</h3>
+            <p class="text-muted mt-2">Games, networking, and fun!</p>
             <a href="event5.html" class="text-blue-400 underline mt-4 block">View Details</a>
           </div>
         </div>
@@ -258,7 +256,7 @@
     </div>
   </section>
 
-  <footer class="py-8 text-center text-gray-600 border-t" style="border-color: rgba(200,174,114,0.12)">
+  <footer class="py-8 text-center text-muted border-t" style="border-color: rgba(200,174,114,0.12)">
     <p>&copy; 2025 SPS USM. All rights reserved.</p>
   </footer>
 
