--- a/event1.html
+++ b/event1.html
@@ -7,18 +7,18 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="bg-gray-900 text-white">
+<body>
   <!-- Navbar (copy same as index.html) -->
   <header class="bg-black bg-opacity-70 fixed w-full top-0 left-0 z-50 shadow-md">
     <nav class="container mx-auto flex justify-between items-center p-4">
-      <a href="index.html" class="text-2xl font-bold text-yellow-400">SPS USM</a>
+  <a href="index.html" class="text-2xl font-bold text-accent">SPS USM</a>
     </nav>
   </header>
 
   <main class="pt-24 container mx-auto px-4">
-    <h1 class="text-4xl font-bold text-yellow-400 mb-6">Physics Demo Day</h1>
+  <h1 class="text-4xl font-bold text-accent mb-6">Physics Demo Day</h1>
     <img src="images/event1.jpg" alt="Physics Demo Day" class="rounded-2xl shadow-lg mb-6">
-    <p class="text-gray-300 leading-relaxed">
+  <p class="text-muted leading-relaxed">
       SPS hosted an exciting Physics Demo Day where students showcased engaging experiments, from liquid nitrogen demos to laser diffraction. This event brought together students, faculty, and the community for a fun and interactive day of physics learning!
     </p>
   </main>
