--- a/event4.html
+++ b/event4.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Physics Lab Tour - SPS USM Events</title>
+  <title>Physics Social Night - SPS USM Events</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
     .event-header {
-      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('images/lab-tour.jpg');
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('images/social-night.jpg');
       background-size: cover;
       background-position: center;
       height: 400px;
@@ -85,8 +85,8 @@
 
   <div class="event-header" data-aos="fade">
     <div>
-      <h1 class="text-4xl md:text-5xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Physics Lab Tour</h1>
-      <p class="text-xl">Explore Our State-of-the-Art Research Facilities</p>
+      <h1 class="text-4xl md:text-5xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Physics Social Night</h1>
+      <p class="text-xl">Connect, Share, and Have Fun with Fellow Physics Enthusiasts</p>
     </div>
   </div>
 
@@ -103,51 +103,51 @@
           <line x1="8" y1="2" x2="8" y2="6"></line>
           <line x1="3" y1="10" x2="21" y2="10"></line>
         </svg>
-        <span>September 15, 2025</span>
+        <span>September 30, 2025</span>
       </div>
       <div class="event-meta-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
           <circle cx="12" cy="10" r="3"></circle>
         </svg>
-        <span>Physics Building</span>
+        <span>Student Union</span>
       </div>
       <div class="event-meta-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <circle cx="12" cy="12" r="10"></circle>
           <polyline points="12 6 12 12 16 14"></polyline>
         </svg>
-        <span>2:00 PM - 4:00 PM</span>
+        <span>6:00 PM - 9:00 PM</span>
       </div>
     </div>
 
     <div class="event-details" data-aos="fade-up">
       <h2 class="text-2xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Event Overview</h2>
-      <p class="mb-4">Join us for an exclusive tour of USM's physics laboratories and research facilities. This is your chance to see cutting-edge equipment and learn about ongoing research projects from faculty and graduate students.</p>
+      <p class="mb-4">Join us for an evening of fun, food, and physics! Our Social Night is the perfect opportunity to meet fellow physics students, faculty members, and make lasting connections in a relaxed atmosphere.</p>
       
-      <p class="mb-4">Tour Highlights:</p>
+      <p class="mb-4">Event Features:</p>
       <ul class="list-disc ml-6 mb-4">
-        <li>Quantum Physics Laboratory</li>
-        <li>Optics and Laser Research Facility</li>
-        <li>Materials Science Lab</li>
-        <li>Computational Physics Center</li>
-        <li>Student Research Areas</li>
+        <li>Physics trivia games with prizes</li>
+        <li>Pizza and refreshments</li>
+        <li>Science demonstrations</li>
+        <li>Networking opportunities</li>
+        <li>Physics-themed activities</li>
       </ul>
 
-      <p class="mb-4">What to Expect:</p>
+      <p class="mb-4">Who Should Attend:</p>
       <ul class="list-disc ml-6 mb-4">
-        <li>Hands-on demonstrations</li>
-        <li>Meet research faculty</li>
-        <li>Learn about research opportunities</li>
-        <li>Q&A sessions at each lab</li>
-        <li>Light refreshments provided</li>
+        <li>Physics majors and minors</li>
+        <li>STEM students interested in physics</li>
+        <li>Faculty members</li>
+        <li>Physics Club members</li>
+        <li>Anyone interested in physics!</li>
       </ul>
     </div>
 
     <div class="glass" data-aos="fade-up">
-      <h2 class="text-2xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Registration</h2>
-      <p class="mb-4">Space is limited to ensure the best experience for all participants. Please register in advance.</p>
-      <button class="btn btn-accent">Register Now</button>
+      <h2 class="text-2xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">RSVP</h2>
+      <p class="mb-4">Help us plan for food and activities by letting us know you're coming!</p>
+      <button class="btn btn-accent">RSVP Now</button>
     </div>
   </div>
 
