--- a/event3.html
+++ b/event3.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Physics Lab Tour - SPS USM Events</title>
+  <title>Outreach Program - SPS USM Events</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
     .event-header {
-      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('images/lab-tour.jpg');
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('images/outreach.jpg');
       background-size: cover;
       background-position: center;
       height: 400px;
@@ -85,8 +85,8 @@
 
   <div class="event-header" data-aos="fade">
     <div>
-      <h1 class="text-4xl md:text-5xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Physics Lab Tour</h1>
-      <p class="text-xl">Explore Our State-of-the-Art Research Facilities</p>
+      <h1 class="text-4xl md:text-5xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Physics Outreach Program</h1>
+      <p class="text-xl">Inspiring the Next Generation of Physicists</p>
     </div>
   </div>
 
@@ -103,51 +103,52 @@
           <line x1="8" y1="2" x2="8" y2="6"></line>
           <line x1="3" y1="10" x2="21" y2="10"></line>
         </svg>
-        <span>September 15, 2025</span>
+        <span>Monthly Events</span>
       </div>
       <div class="event-meta-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
           <circle cx="12" cy="10" r="3"></circle>
         </svg>
-        <span>Physics Building</span>
+        <span>Local Schools</span>
       </div>
       <div class="event-meta-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <circle cx="12" cy="12" r="10"></circle>
           <polyline points="12 6 12 12 16 14"></polyline>
         </svg>
-        <span>2:00 PM - 4:00 PM</span>
+        <span>Various Times</span>
       </div>
     </div>
 
     <div class="event-details" data-aos="fade-up">
-      <h2 class="text-2xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Event Overview</h2>
-      <p class="mb-4">Join us for an exclusive tour of USM's physics laboratories and research facilities. This is your chance to see cutting-edge equipment and learn about ongoing research projects from faculty and graduate students.</p>
+      <h2 class="text-2xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Program Overview</h2>
+      <p class="mb-4">Our Physics Outreach Program brings exciting demonstrations and hands-on activities to local schools, inspiring young minds to explore the wonders of physics and science.</p>
       
-      <p class="mb-4">Tour Highlights:</p>
+      <p class="mb-4">Activities Include:</p>
       <ul class="list-disc ml-6 mb-4">
-        <li>Quantum Physics Laboratory</li>
-        <li>Optics and Laser Research Facility</li>
-        <li>Materials Science Lab</li>
-        <li>Computational Physics Center</li>
-        <li>Student Research Areas</li>
+        <li>Interactive physics demonstrations</li>
+        <li>Hands-on experiments for students</li>
+        <li>Q&A sessions with physics students</li>
+        <li>Career path discussions</li>
+        <li>Take-home physics projects</li>
       </ul>
 
-      <p class="mb-4">What to Expect:</p>
+      <p class="mb-4">Target Audience:</p>
       <ul class="list-disc ml-6 mb-4">
-        <li>Hands-on demonstrations</li>
-        <li>Meet research faculty</li>
-        <li>Learn about research opportunities</li>
-        <li>Q&A sessions at each lab</li>
-        <li>Light refreshments provided</li>
+        <li>Middle school students</li>
+        <li>High school students</li>
+        <li>Science teachers</li>
+        <li>School administrators</li>
       </ul>
+
+      <p>All materials and equipment are provided by SPS USM.</p>
     </div>
 
     <div class="glass" data-aos="fade-up">
-      <h2 class="text-2xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Registration</h2>
-      <p class="mb-4">Space is limited to ensure the best experience for all participants. Please register in advance.</p>
-      <button class="btn btn-accent">Register Now</button>
+      <h2 class="text-2xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Get Involved</h2>
+      <p class="mb-4">Schools can request a visit, and SPS members can volunteer to participate in outreach events.</p>
+      <button class="btn btn-accent">Request a Visit</button>
     </div>
   </div>
 
